--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 28px 300px;
+    padding: 16px 30px;
 }
 
 .logo {
@@ -14,7 +14,7 @@
 }
 
 .nav {
-    display: flex;
+    display: none;
     gap: 65px;
 }
 
@@ -28,4 +28,28 @@
 .navItem:hover {
     color: #025ac5;
     text-decoration: underline;
+}
+
+@media only screen and (min-width: 600px) {
+    .header {
+        padding: 28px 30px;
+    }
+}
+
+@media only screen and (min-width: 774px) {
+    .nav {
+        display: flex;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .header {
+        padding: 28px 100px;
+    }
+}
+
+@media only screen and (min-width: 1700px) {
+    .header {
+        padding: 28px 300px;
+    }
 }
