--- a/src/app/components/HeroSection.module.css
+++ b/src/app/components/HeroSection.module.css
@@ -1,39 +1,40 @@
 .hero {
   display: flex;
-  padding: 0px 300px;
-  margin-top: 180px;
+  padding: 0px 30px;
+  margin-top: 100px;
 }
 
 .content {
-  width: 500px;
+  max-width: 500px;
   position: relative;
-  margin-right: 80px;
+  margin-right: 0px;
 }
 
 .title {
-  font-size: 44px;
-  margin-bottom: 20px;
+  font-size: 28px;
+  margin-bottom: 10px;
   color: #4b4b4b;
   line-height: 1;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .titleItem {
   color: #2e65ff;
   font-style: italic;
-  font-size: 72px;
+  font-size: 42px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
 
 .titleDesc {
-  font-size: 36px;
+  font-size: 28px;
 }
 
 .description {
-  font-size: 16px;
-  margin-bottom: 30px;
+  font-size: 12px;
+  margin-bottom: 18px;
   color: #a3a3a3;
+  max-width: 400px;
 }
 
 .btn {
@@ -44,11 +45,10 @@
   color: white;
   border: none;
   border-radius: 100px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 700;
   cursor: pointer;
   transition: background-color 0.3s;
-
 }
 
 .btn:hover {
@@ -56,6 +56,7 @@
 }
 
 .imageContainer {
+  display: none;
   position: relative;
   flex: 1;
 }
@@ -63,7 +64,7 @@
 .image1,
 .image2 {
   position: absolute;
-  width: 300px;
+  width: 160px;
   height: auto;
   user-select: none;
   animation: moveUpDown 3s ease-in-out infinite;
@@ -71,7 +72,7 @@
 
 .image1 {
   top: -80px;
-  right: -60px;
+  right: 0px;
 }
 
 .image2 {
@@ -94,13 +95,13 @@
 }
 
 .card1 {
-  --primary-color: #7257fa;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   padding: 20px;
   border-radius: 8px;
   background: #fdfdfd;
   box-shadow: 8px 8px 16px 0px rgb(0 0 0 / 0.05);
   user-select: none;
+  display: none;
 }
 
 .card1 .card__title {
@@ -115,7 +116,6 @@
   color: #3c3852;
   font-size: 14px;
 }
-
 
 .card2 {
   position: absolute;
@@ -185,4 +185,98 @@
   height: 14px;
   color: #555;
   cursor: pointer;
+}
+
+@media only screen and (min-width: 468px) {
+
+  .image1,
+  .image2 {
+    width: 200px;
+  }
+
+}
+
+@media only screen and (min-width: 600px) {
+  .hero {
+    margin-top: 180px;
+  }
+
+  .title {
+    font-size: 44px;
+    margin-bottom: 20px;
+  }
+
+  .titleItem {
+    font-size: 72px;
+  }
+
+  .titleDesc {
+    font-size: 36px;
+  }
+
+  .description {
+    font-size: 16px;
+    margin-bottom: 30px;
+    max-width: 500px;
+  }
+
+  .image1,
+  .image2 {
+    width: 300px;
+  }
+
+  .image1 {
+    top: -80px;
+    right: -60px;
+  }
+}
+
+
+@media only screen and (min-width: 774px) {
+  .btn {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .imageContainer {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .hero {
+    padding: 0px 100px;
+  }
+
+  .content {
+    margin-right: 80px;
+  }
+
+  .title {
+    font-size: 44px;
+  }
+
+  .titleItem {
+    font-size: 72px;
+  }
+
+  .titleDesc {
+    font-size: 36px;
+  }
+
+  .description {
+    font-size: 16px;
+  }
+
+  .card1 {
+    display: block;
+  }
+
+}
+
+@media only screen and (min-width: 1700px) {
+  .hero {
+    padding: 0px 300px;
+  }
 }
