--- a/src/app/components/DownloadApp.module.css
+++ b/src/app/components/DownloadApp.module.css
@@ -1,65 +1,198 @@
 .wave {
     background-image: url("../../../public/assets/wave.svg");
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: top;
     background-size: cover;
     width: 100%;
-    height: 330px;
-    margin-top: 60px;
+    height: 150px;
+    margin-top: 30px;
 }
 
 .downloadApp {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     padding: 0px 20px;
     background-color: #0070f3;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
 }
 
 .imageContainer {
-    width: 550px;
+    width: 300px;
     padding-right: 20px;
     position: relative;
-    margin-right: 80px;
+    margin-bottom: 140px;
 }
 
 .image {
     width: 100%;
     height: auto;
     position: absolute;
-    top: -450px;
+    top: -200px;
 }
 
 .content {
-    max-width: 600px;
-    text-align: left;
-    padding-left: 20px;
+    max-width: 300px;
+    text-align: center;
 }
 
 .title {
-    font-size: 36px;
-    margin-bottom: 20px;
+    font-size: 18px;
+    margin-bottom: 12px;
     color: #ffffff;
 }
 
 .description {
-    font-size: 18px;
-    margin-bottom: 30px;
+    font-size: 12px;
+    margin-bottom: 18px;
     color: #d2d2d2;
 }
 
 .button {
+    position: relative;
     background-color: #005bb5;
     color: white;
-    padding: 12px 24px;
-    border: none;
     border-radius: 4px;
+    padding: 12px 24px;
+    font-size: 12px;
+    border: none;
+    overflow: hidden;
+    transition: color 0.5s ease-in-out;
+}
+
+.badges {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: #004494;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
+.button:hover .badges {
+    opacity: 1;
+    visibility: visible;
+}
+
+.storeBadge {
+    width: auto;
+    height: 30px;
     cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
+    z-index: 1;
 }
 
 .button:hover {
     background-color: #004494;
+    color: transparent;
+}
+
+@media only screen and (min-width: 600px) {
+    .downloadApp {
+        flex-direction: row;
+    }
+
+    .imageContainer {
+        width: 300px;
+        margin-right: 10px;
+    }
+
+    .image {
+        width: 100%;
+        height: auto;
+        top: -120px;
+    }
+
+    .content {
+        max-width: 250px;
+        text-align: left;
+        padding-left: 20px;
+    }
+
+}
+
+@media only screen and (min-width: 774px) {
+    .wave {
+        height: 200px;
+    }
+
+    .imageContainer {
+        width: 400px;
+        margin-right: 20px;
+    }
+
+    .image {
+        top: -250px;
+    }
+
+    .button {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .wave {
+        height: 330px;
+    }
+
+    .downloadApp {
+        padding-bottom: 60px;
+    }
+
+    .imageContainer {
+        width: 500px;
+        margin-right: 60px;
+    }
+
+    .image {
+        top: -300px;
+    }
+
+    .title {
+        font-size: 28px;
+        margin-bottom: 16px;
+    }
+
+    .description {
+        font-size: 14px;
+        margin-bottom: 24px;
+    }
+
+    .content {
+        max-width: 450px;
+    }
+}
+
+
+@media only screen and (min-width: 1700px) {
+    .imageContainer {
+        width: 600px;
+        margin-right: 80px;
+    }
+
+    .image {
+        top: -400px;
+    }
+
+    .title {
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+
+    .description {
+        font-size: 16px;
+        margin-bottom: 30px;
+    }
+
+    .content {
+        max-width: 500px;
+    }
 }
