--- a/src/app/components/Statistics.module.css
+++ b/src/app/components/Statistics.module.css
@@ -1,23 +1,27 @@
 .statistics {
     display: flex;
-    gap: 150px;
-    margin: 120px 0px;
+    column-gap: 20px;
+    row-gap: 30px;
+    margin: 60px 0px;
     justify-content: center;
+    flex-wrap: wrap;
+    padding: 0px 30px;
 }
 
 .stat {
     text-align: center;
     max-width: 200px;
+    min-width: 100px;
     animation: countUp 0.2s ease-out;
 }
 
 .number {
-    font-size: 48px;
+    font-size: 34px;
     color: #0070f3;
 }
 
 .label {
-    font-size: 14px;
+    font-size: 12px;
     color: #666;
 }
 
@@ -37,7 +41,7 @@
 .joinPartner {
     background-color: #0070f3;
     color: white;
-    padding: 60px 20px;
+    padding: 40px 30px;
     text-align: center;
 }
 
@@ -47,28 +51,91 @@
 }
 
 .title {
-    font-size: 34px;
+    font-size: 24px;
     margin-bottom: 8px;
     color: #ffffff;
 }
 
 .description {
-    font-size: 16px;
-    margin-bottom: 30px;
+    font-size: 12px;
+    margin-bottom: 18px;
     color: #f5f5f5;
 }
 
 .button {
     background-color: #005bb5;
     color: white;
-    padding: 14px 24px;
+    padding: 12px 24px;
     border: none;
     border-radius: 100px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 14px;
     transition: background-color 0.3s;
 }
 
 .button:hover {
     background-color: #004494;
+}
+
+
+@media only screen and (min-width: 600px) {
+    .statistics {
+        column-gap: 80px;
+        margin: 80px 0px;
+    }
+
+    .number {
+        font-size: 36px;
+    }
+
+    .joinPartner {
+        padding: 50px 30px;
+    }
+
+    .title {
+        font-size: 32px;
+    }
+
+    .description {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (min-width: 774px) {
+    .button {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 962px) {
+    .statistics {
+        column-gap: 100px;
+        margin: 120px 0px;
+    }
+
+    .joinPartner {
+        padding: 60px 30px;
+    }
+
+    .button {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .number {
+        font-size: 48px;
+    }
+
+    .label {
+        font-size: 14px;
+    }
+
+    .title {
+        font-size: 34px;
+    }
+
+    .description {
+        font-size: 16px;
+    }
 }
