--- a/src/app/components/VideoSection.module.css
+++ b/src/app/components/VideoSection.module.css
@@ -3,27 +3,27 @@
     align-items: center;
     background-color: #f8f8f8;
     justify-content: space-between;
-    margin: 100px 0px;
-    padding: 0px 300px;
+    padding: 0px 30px;
 }
 
 .video {
-    width: 600px;
+    display: none;
+    width: 400px;
     object-fit: cover;
-    transform: scale(1);
-    transform: scaleY(1.5);
+    transform: scaleY(1.2);
 }
 
 .infoContainer {
-    text-align: left;
-    padding-left: 60px;
+    text-align: center;
+    padding: 30px 0px;
     color: #6c6c6c;
+    margin: auto;
     max-width: 600px;
 }
 
 .infoContainer h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .infoContainer h1 i {
@@ -31,48 +31,167 @@
 }
 
 .infoContainer p {
-    font-size: 16px;
+    font-size: 10px;
 }
 
 .moreAboutSection {
     color: black;
-    padding: 60px 300px;
+    padding: 60px 30px;
 }
 
-.moreAboutSection h1 {
-    font-size: 32px;
-    margin-bottom: 40px;
+.moreAboutSection>h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 28px;
+    margin-bottom: 20px;
+    max-width: 200px;
 }
 
 .blogContainer {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .blogCard {
     flex: 1;
     background-color: #ffffff;
     border-radius: 8px;
-    overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 280px;
+    max-width: 600px;
     text-align: center;
-    width: 300px;
+    overflow: hidden;
 }
 
 .blogImage {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    transition: transform 0.3s ease-in-out;
+    transform-origin: center;
+}
+
+.blogImageFrame {
+    overflow: hidden;
+}
+
+.blogCard:hover .blogImage {
+    transform: scale(1.4);
+}
+
+.blogCard:hover {
+    cursor: pointer;
 }
 
 .blogCard h1 {
-    font-size: 14px;
-    margin: 20px;
+    font-size: 12px;
+    margin: 14px;
     text-align: left;
 }
 
 .blogCard h1:hover {
     text-decoration: underline;
-    cursor: pointer;
+}
+
+@media only screen and (min-width: 400px) {
+    .moreAboutSection>h1 {
+        max-width: max-content;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .infoContainer h1 {
+        font-size: 28px;
+    }
+
+    .infoContainer p {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (min-width: 774px) {
+    .moreAboutSection>h1 {
+        font-size: 32px;
+        margin-bottom: 40px;
+    }
+
+    .infoContainer h1 {
+        font-size: 28px;
+    }
+
+    .infoContainer p {
+        font-size: 14px;
+    }
+
+    .blogCard h1 {
+        font-size: 16px;
+        margin: 20px;
+    }
+
+}
+
+@media only screen and (min-width: 962px) {
+    .infoContainer {
+        padding: 0px;
+        padding-left: 20px;
+        text-align: left;
+    }
+
+    .video {
+        display: block;
+    }
+
+    .videoSection {
+        margin: 40px 0px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .blogContainer {
+        gap: 30px;
+    }
+
+    .moreAboutSection {
+        padding: 60px 100px;
+    }
+
+    .videoSection {
+        margin: 100px 0px;
+        padding: 0px 100px;
+    }
+
+    .infoContainer h1 {
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+
+    .infoContainer {
+        padding-left: 60px;
+    }
+
+    .infoContainer p {
+        font-size: 16px;
+    }
+
+    .video {
+        width: 600px;
+        transform: scaleY(1.5);
+    }
+}
+
+
+
+@media only screen and (min-width: 1700px) {
+
+    .videoSection {
+        padding: 0px 300px;
+    }
+
+
+    .moreAboutSection {
+        padding: 60px 300px;
+    }
+
 }
